# benchmark

./: README.md  pyproject.toml
example_data/: augustus_annotations.npz  genome_annotation_comparison_enhanced.html  ground_truth_annotations.npz  segmentnt_annotations.npz  tiberius_annotations.npz
examples/: multiple_sequence_benchmark.ipynb  simple_example.ipynb  single_sequence_benchmark.ipynb
prediction_evalutation/: PlotPredictions.py  bokeh_genome_tracks.html  evaluate_predictors.py  gpt.py  plot_errors.py  single_pred_plotting.py  summary_stat_plotting.py  test_benchmark.py
src/dna_segmentation_benchmark/: evaluate_predictors.py
