[project]
name = "rack"
version = "0.1.0"
description = "Benchmark predictions of gene finding tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcbio-gff>=0.7.1",
    "biopython>=1.84",
    "bokeh>=3.6.0",
    "click-log>=0.4.0",
    "click>=8.1.7",
    "dna-features-viewer>=3.1.3",
    "h5py>=3.12.1",
    "httpx>=0.27.2",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "progress-table>=2.2.8",
    "pytest>=8.3.3",
    "reportlab>=4.2.5",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tqdm>=4.66.5",
]

[tool.uv]
dev-dependencies = [
    "palmerpenguins>=0.1.4",
    "pandas-stubs>=2.2.2.240909",
    "pytest>=8.3.3",
    "ruff>=0.6.8",
    "types-tabulate>=0.9.0.20240106",
    "types-tqdm>=4.66.0.20240417",
]
