[project]
name = "benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.7.0",
    "h5py>=3.13.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]


[tool.ruff]
line-length = 120
