[project]
name = "dna-segmentation-benchmark"
version = "0.0.1"
description = "A collection of different evaluators for dna nucleodtide level labeling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.85",
    "bokeh>=3.7.0",
    "h5py>=3.13.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]


[tool.ruff]
line-length = 120
